k8s/pihole/pi-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pi-svc
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
    traefik.ingress.kubernetes.io/service.sticky.cookie.name: cookie
    traefik.ingress.kubernetes.io/service.sticky.cookie.secure: "true"
spec:
  type: LoadBalancer
  selector:
    app: pihole
  ports:
    - protocol: TCP
      name: web
      port: 8081
      targetPort: 80 
    - protocol: UDP
      name: dns
      port: 53
      targetPort: 53
    - protocol: TCP
      name: tcpdns
      port: 53
      targetPort: 53
