k8s/pihole/pi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pi-ingress
spec:
  rules:
    - host: pihole
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pi-svc
                port:
                  number: 8081
